# rag-poisoning-poc

./: .env.example  .gitignore  CHECKLIST_ENTREGA.md  ENTREGABLE.md  GUION_VIDEO.md  MODO_EMPLEO.md  PLAN_MEJORAS.md  README.md  RECONOCIMIENTO.md  build_zip.sh  dataset_loader.py  defenses.py  demo_baseline.py  demo_poisoning.py  ingest.py  metricas.py  poisoning.py  pyproject.toml  query.py  rag_pipeline.py  requirements.txt  run_experiment.py  setup.sh  validate_setup.py
corpus_ampliado/: README.md  politica_backups.txt  politica_byod.txt  politica_cloud.txt  politica_continuidad_negocio.txt  politica_correo_electronico.txt  politica_desarrollo_seguro.txt  politica_escritorios_limpios.txt  politica_formacion_seguridad.txt  politica_gestion_parches.txt  politica_identidad_digital.txt  politica_logs_monitorizacion.txt  politica_privacidad_datos.txt  politica_proveedores.txt  politica_seguridad_fisica.txt  politica_uso_aceptable.txt  politica_vpn.txt  politica_wifi.txt  procedimiento_alta_baja.txt  procedimiento_auditoria.txt  procedimiento_gestion_vulnerabilidades.txt  procedimiento_respuesta_ransomware.txt
datasets/: attack_indicators.yaml  queries_es.txt
docs/: configuracion_red.txt  control_accesos.txt  gestion_incidentes.txt  politica_seguridad.txt
resultados/: baseline_results.json  metricas_resumen.json  poisoning_comparison_k3.json  poisoning_comparison_k5.json  seccion8_resultados_generado.md
