# pyproject.toml — RAG Poisoning PoC
# Asignatura: Seguridad de la Informacion (SDI) — Deusto 2025/26
# Autor: Pablo Garcia

[project]
name = "rag-poisoning-poc"
version = "0.2.0"
description = "PoC academico de ataques de envenenamiento sobre sistemas RAG (data poisoning + prompt injection)"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Pablo Garcia" },
]
keywords = ["rag", "poisoning", "security", "llm", "chromadb", "langchain", "academic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Dependencias replicadas desde requirements.txt. Rangos compatibles para
# que el resolver de pip elija lo ultimo compatible sin romper APIs.
dependencies = [
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-text-splitters>=0.3.0,<0.4.0",
    "chromadb>=0.5.0,<1.0.0",
    "langchain-chroma>=0.1.4,<0.3.0",
    "sentence-transformers>=3.0,<6.0",
    "langchain-huggingface>=0.1.0,<0.3.0",
    "langchain-ollama>=0.2.0,<0.4.0",
    "langchain-openai>=0.2.0,<0.4.0",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.urls]
Repository = "https://github.com/pablogarcia/rag-poisoning-poc"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "rag_pipeline",
    "ingest",
    "query",
    "poisoning",
    "demo_baseline",
    "demo_poisoning",
    "metricas",
    "run_experiment",
    "defenses",
    "dataset_loader",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
